3.msa/k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# aws lb -> ingress controller pod -> ingress -> service로의 라우팅

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: bradkim
  annotations:
  # 여기서 "nginx"로 지정한 것은 이 Ingress가 NGINX 기반 Ingress Controller에 의해 처리된다는 의미
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거
    
spec:
  tls:
  - hosts:
    - "server.bradkim199.shop"
    secretName: server-bradkim199-shop-tls
  rules:
  - host: server.bradkim199.shop  # 설정하려는 도메인 이름.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ordersystem-service
            port:
              number: 80
